# C--learning

./: .gitmodules  README.md  note.odt
projects/awesome_cmake/: CMakeLists.txt
projects/awesome_cmake/include/: Awesome.h
projects/awesome_cmake/src/: Awesome.cpp  main.cpp
projects/gen_word/: func_pointer.cpp
projects/gen_word/src/: main.cpp  main2.cpp
projects/helloword/: Main.cpp
projects/helloword/src/: for_state.cpp
projects/helloword_cmake/: CMakeLists.txt
projects/helloword_cmake/include/: test.h
projects/helloword_cmake/src/: log.cpp  main.cpp
projects/search_pic/: image_downloader.py
projects/search_pic/猫咪/: 猫咪_urls.xlsx
test1/: test1.cpp  test1.sln  test1.vcxproj  test2.cpp
test1/Debug/: test1.exe.recipe  test1.ilk  test1.vcxproj.FileListAbsolute.txt  vc142.idb
test1/Debug/test1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test1.lastbuildstate
